[project]
name = "health-wellness-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maheen-Zubair", email = "sanazubair071@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "agent>=0.1.3",
    "openai-agents>=0.1.0",
    "streamlit>=1.46.1",
]

[project.scripts]
health-wellness-agent = "health_wellness_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
